# zellij-status-tab-bar

./: Cargo.toml  LICENSE  README.md
src/: line.rs  main.rs  tab.rs
