[package]
name = "zellij-status-tab-bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"

zellij-tile = "0"
zellij-tile-utils = "0"

[dev-dependencies]
regex = "1"

[profile.release]
lto = true
opt-level = 's'